--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "currency.js": "^2.0.4",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "firebase": "^9.8.2",
+    "firebase-tools": "^11.0.1",
+    "g": "^2.0.1",
     "hashids": "^2.2.8",
     "js-cookie": "^2.2.1",
+    "localforage": "^1.10.0",
     "luxon": "^2.1.1",
     "moment-timezone": "^0.5.34",
     "next": "11.0.1",
@@ -27,7 +31,8 @@
     "react-hook-form": "^7.9.0",
     "react-query": "^3.34.15",
     "react-quill": "^1.3.5",
-    "react-sortable-hoc": "^2.0.0"
+    "react-sortable-hoc": "^2.0.0",
+    "react-toastify": "^9.0.3"
   },
   "devDependencies": {
     "@types/draft-js": "^0.11.4",
