--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-query": "^3.34.15",
     "react-quill": "^1.3.5",
     "react-sortable-hoc": "^2.0.0",
-    "react-toastify": "^9.0.3"
+    "react-toastify": "^9.0.3",
+    "recoil": "^0.7.3"
   },
   "devDependencies": {
     "@types/draft-js": "^0.11.4",
